Fix #309, style buttons in high contrast mode

--- a/preview-src/index.css
+++ b/preview-src/index.css
@@ -544,3 +544,14 @@ code {
 	box-sizing: border-box;
 	display: inline-block;
 }
+
+/* High Contrast Mode */
+
+.vscode-high-contrast button {
+	background: none;
+	border: 1px solid var(--vscode-contrastBorder);
+}
+
+.vscode-high-contrast button.secondary {
+	-webkit-filter: none;
+}
